<resources>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_systems">Systems</string>
    <string name="title_games">Games</string>
    <string name="title_settings">Settings</string>
    <string name="recent">Recents</string>
    <string name="favorites">Favorites</string>
    <string name="discover">Discover</string>
    <string name="rescan">Rescan</string>
    <string name="stop">Stop</string>
    <string name="none">None</string>
...
    <string name="roms">ROMs</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="save_sync">Save Sync</string>
    <string name="show_all">Show All</string>
    <string name="back">Back</string>
    <string name="close">Close</string>

    <string name="game_page_search_suggestion">Search games</string>

    <string name="settings_category_general">General</string>
    <string name="settings_category_input">Input</string>
...
    <string name="tilt_configuration_analog_right">Right Analog</string>
    <string name="tilt_configuration_buttons_l_r">L - R</string>
    <string name="tilt_configuration_buttons_l1_r1">L1 - R1</string>
    <string name="tilt_configuration_buttons_l2_r2">L2 - R2</string>

    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_title_theme">Theme</string>
    <string name="theme_mode_system">System</string>
    <string name="theme_mode_light">Light</string>
    <string name="theme_mode_dark">Dark</string>
    <string name="settings_title_dynamic_color">Wallpaper colors</string>
    <string name="settings_description_dynamic_color">Use Material You colors from your wallpaper. Turn off for neutral colors.</string>

...
