...
                        }
                    }
                },
            content = {
                Surface(
                    modifier =
                        Modifier.fillMaxSize().clipToBounds().testTag("console_settings_dialog")
                            .focusRequester(centerFocus).onFocusChanged { centerHasFocus = it.hasFocus }
                            .focusProperties { exit = { FocusRequester.Cancel } }.focusGroup(),
                    shape = RoundedCornerShape(16.dp),
                    color = MaterialTheme.colorScheme.surface,
                    border = BorderStroke(.5.dp, MaterialTheme.colorScheme.outlineVariant.copy(alpha = .5f)),
                ) {
...
